2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sets.tcl: Typo police. No functional changes.

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* list.tcl (split): New method, like 'filter', but returns lists
	* list.test:        of both passing and failing elements. Extended
	* struct_list.man:  both testsuite and documentation.

2004-02-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* list.tcl (assign): Synchronized API to Tcl 8.5 lassign.
	* struct_list.man:

	* list.test: Added conditionals for version dependent results.

2004-02-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.man:  Added new method 'arc attr' ad 'node attr' to
	* graph.tcl:  the graph data structure. They serve the same
	* graph.test: purpose as the 'attr' method for trees. See below.

	  Additional the 'arcs' and 'nodes' method have been given
	  '-filter' options, similar to the filter for the children of a
	  node in trees.

2004-02-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* struct_tree.man: New method 'attr' for attribute searches
	* tree.tcl:        based on attribute name, and node
	* tree.test:       restrictions.

2004-02-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* struct_tree.man: Extended the method 'children', now allows
	* tree.tcl:        node filtering and recursive listing of all
	* tree.man:	   children in the tree starting at the node.

	* struct_list.man: Added a 'shift method to 'struct::list'.
	* list.tcl:
	* list.test:

	* struct_list.man: Added a 'filter' method to 'struct::list'.
	* list.tcl:        This method applies a test to all elements